--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
         <meta name="author" content="{project.author}">
         <meta name="theme-color" content="#00C3FF">
         <meta property="og:description" content="{project.instructions}&#10;&#10;{project.notes}">
-        <meta property="og:image" content="https://projects.penguinmod.com/api/pmWrapper/iconUrl?id={project.id}">
+        <meta property="og:image" content="https://snailshare-backend.glitch.me/api/pmWrapper/iconUrl?id={project.id}">
         <meta name="description" content="{project.notes}">
         <meta property="twitter:description" content="{project.notes}">
         <title>Snail IDE - {project.name}</title>
